LendInvestApplicationTask/force-app/main/default/objects/Sms_Setting__mdt/Sms_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Metadata for SMS service</description>
    <label>Sms Setting</label>
    <pluralLabel>Sms Settings</pluralLabel>
</CustomObject>