LendInvestApplicationTask/force-app/main/default/objects/Sms_Setting__mdt/fields/AccountSID__c.field-meta.xml
<CustomField>
    <fullName>AccountSID__c</fullName>
    <description>Account SID from Twillio</description>
    <label>AccountSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>