LendInvestApplicationTask/force-app/main/default/objects/Sms_Setting__mdt/fields/FromNumber__c.field-meta.xml
<CustomField>
    <fullName>FromNumber__c</fullName>
    <description>Twillio Account From Number</description>
    <label>FromNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>