LendInvestApplicationTask/force-app/main/default/objects/Sms_Setting__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Twillio Account Token</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>