LendInvestApplicationTask/force-app/main/default/objects/Sms_Setting__mdt/fields/ToNumber__c.field-meta.xml
<CustomField>
    <fullName>ToNumber__c</fullName>
    <description>Managers Number to send Gold Account Message.</description>
    <label>ManagerNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>